# fes-ml

./: .gitignore  .pre-commit-config.yaml  CODE_STRUCTURE.md  README.md  environment.yaml  environment_emle_aev.yaml  environment_rascal.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
analysis/: analyse.py  analyse_old.py
data/benzene/: benzene_gaff2_gas.prm7  benzene_gaff2_gas.rst7  benzene_gaff2_water.prm7  benzene_gaff2_water.rst7  benzene_gas_sage.prmtop  benzene_sage_gas.prm7  benzene_sage_gas.rst7  benzene_sage_water.prm7  benzene_sage_water.rst7  benzene_sol.inpcrd  benzene_sol.prmtop  benzene_sol_sage.inpcrd  benzene_sol_sage.prmtop
data/diala/: diala_solvated.prmtop
dev-tools/conda-envs/: ci_env.yaml
dev-tools/hpc/: environment_aarch64_emle_aev.yaml
examples/: benzene_ml_mm_gas.py  benzene_ml_mm_sol.py  benzene_ml_mm_sol_emle.py  benzene_ml_mm_sol_mts.py  benzene_ml_sol_mts.py  benzene_mm.py  benzene_mm_sol.py  benzene_mm_sol_emle.py  benzene_mm_sol_mts.py  test_emle.py
examples/additional_scripts/: README.txt  analysis.py
examples/openff_strategy/: analysis.py  benzene_mm_sol_openff.py  openff_system_creation.py  performance_benchmark.py  performance_benchmark_emle_aev.py
examples/openff_strategy/mts_benchmark/ml/: run_fes.py  run_fes.sh
examples/openff_strategy/mts_benchmark/ml_mts/: agg_output.py  analysis.py  run_fes.py
examples/openff_strategy/mts_benchmark/mm/: run_fes.py
examples/openff_strategy/run_scripts/: agg_ouput.py  analysis.py  create_run_system.py  create_run_system_all_windows.py  run.sbatch
examples/openff_strategy/run_scripts/bede_scripts_anna/: analysis.py  create_run_system_single_window.py  submit_concerted_mm_ml_sol.sh  submit_fes_window.sbatch  submit_staggered_mm_ml_sol.sh  submit_staggered_mm_ml_vac.sh  submit_staggered_mm_sol.sh
examples/openff_strategy/run_scripts/concerted/: run_all_mm_ml_sol.sh
examples/openff_strategy/run_scripts/staggered/: run_all_mm_ml_sol.sh  run_all_mm_ml_vac.sh  run_all_mm_sol.sh
examples/sire_strategy/: benzene_ml_mm_gas.py  benzene_ml_mm_sol.py  benzene_ml_mm_sol_emle.py  benzene_ml_mm_sol_mts.py  benzene_ml_sol_mts.py  benzene_mm_sol.py  benzene_mm_sol_emle.py  benzene_mm_sol_mts.py
examples/tmp_fes_ml_sire/: alchemical_subsystem.prm7  full_system.prm7
hpc/: bede.md  environment_aarch64.yaml  environment_ppc64le.yaml  isambard.md  nnpops.patch
src/fes_ml/: __init__.py  alchemical_state.py  alchemist.py  fes.py  log.py  mts.py  utils.py
src/fes_ml/alchemical/: __init__.py  alchemical_factory.py  alchemical_state.py  alchemist.py
src/fes_ml/alchemical/modifications/: __init__.py  base_modification.py  charge_scaling.py  charge_transfer.py  charges_modification.py  custom_lj.py  emle_potential.py  intramolecular.py  intramolecular_modification.py  lj_modification.py  lj_softcore.py  ml_base_modification.py  ml_corr_modification.py  ml_correction.py  ml_interpolate.py  ml_interpolation.py  ml_modification.py  ml_potential.py
src/fes_ml/alchemical/strategies/: __init__.py  alchemical_functions.py  base_strategy.py  openff_strategy.py  openmm_strategy.py  sire_strategy.py
src/tests/: test_alchemical_states.py
src/tests/test_data/: benzene_gaff2_water.prm7  benzene_gaff2_water.rst7
tests/: test_alchemical_states.py
utils/: demo.py  prepare_ligand.py
utils/lj_optimization/: lj_optimizer.py  optimize_water.py
utils/sample_scripts/: openff_system_creation.py  openmm_system_creation.py
utils/sample_scripts/mts_benchmark/: README.md
utils/sample_scripts/mts_benchmark/ml/: agg_output.py  submit_fes_window.slurm
utils/sample_scripts/mts_benchmark/ml_mts/: agg_output.py  run_fes.py  submit_fes_window.slurm
utils/sample_scripts/mts_benchmark/mm/: agg_output.py  run_fes.sh
