[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fes_ml"
description = "A package to run hybrid ML/MM free energy simulations."
requires-python = ">=3.9"
keywords = ["free energy simulations", "free energy", "force field", "machine learning", "openmm"]
authors = [{email = "jmorado@ed.ac.uk"},{name = "Joao Morado"}]
maintainers = [{name = "Joao Morado", email = "jmorado@ed.ac.uk"}]
classifiers = [
  "License :: OSI Approved :: GPL License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10"
]

dynamic = [
  "version",
  "dependencies"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]

[project.urls]
repository = "https://github.com/michellab/fes-ml"

[project.entry-points."alchemical.modifications"]
LJSoftCore = "fes_ml.alchemical.modifications.lj_softcore:LJSoftCoreModificationFactory"
ChargeScaling = "fes_ml.alchemical.modifications.charge_scaling:ChargeScalingModificationFactory"
IntraMolecularNonBondedForces = "fes_ml.alchemical.modifications.intramolecular:IntraMolecularNonBondedForcesModificationFactory"
IntraMolecularNonBondedExceptions = "fes_ml.alchemical.modifications.intramolecular:IntraMolecularNonBondedExceptionsModificationFactory"
IntraMolecularBondedRemoval = "fes_ml.alchemical.modifications.intramolecular:IntraMolecularBondedRemovalModificationFactory"
MLPotential = "fes_ml.alchemical.modifications.ml_potential:MLPotentialModificationFactory"
MLInterpolation = "fes_ml.alchemical.modifications.ml_interpolation:MLInterpolationModificationFactory"
MLCorrection = "fes_ml.alchemical.modifications.ml_correction:MLCorrectionModificationFactory"
EMLEPotential = "fes_ml.alchemical.modifications.emle_potential:EMLEPotentialModificationFactory"
CustomLJ = "fes_ml.alchemical.modifications.custom_lj:CustomLJModificationFactory"
ChargeTransfer = "fes_ml.alchemical.modifications.charge_transfer:ChargeTransferModificationFactory"

[tool.coverage.run]
source = ['src/fes_ml']

[tool.setuptools.dynamic]
version = {attr = "fes_ml.__init__.__version__"}
# dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*__pycache__*"]
namespaces = true

[tool.ruff]
fix = true
line-length = 144

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["fes_ml"]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true